[package]
name = "delflat"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"
